mobile header styles, disable body scroll when mega menu is open, cookie banner z-index fix

--- a/css/settings/_zIndex.scss
+++ b/css/settings/_zIndex.scss
@@ -1,2 +1,3 @@
 $z-index-header: 1000;
 $z-index-dialog: 1001;
+$z-index-cookies: 1002;
